implemented OpenAPI example
added implementation using OpenAPI specification
the API is described in an yaml file
the REST API interfaces and model classes are generated using the
yaml definition file